header section ready

--- a/index.html
+++ b/index.html
@@ -36,37 +36,54 @@
                             <a href="#" class="menu__link">News</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#course-program" class="menu__link">Entertainment</a>
+                            <a href="#" class="menu__link">Entertainment</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#benefits" class="menu__link">Lifestyle</a>
+                            <a href="#" class="menu__link">Lifestyle</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#testimonials" class="menu__link">Sports</a>
+                            <a href="#" class="menu__link">Sports</a>
                         </li>
                         <li class="menu__item">
-                            <a href="#discovery-call" class="menu__link">Business</a>
+                            <a href="#" class="menu__link">Business</a>
                         </li> 
                         <li class="menu__item">
-                            <a href="#discovery-call" class="menu__link">Weather</a>
+                            <a href="#" class="menu__link">Weather</a>
                         </li> 
-                        <li class="menu__item">
-                            <a href="#discovery-call" class="menu__link">More</a>
+                        <li class="menu__item menu__item--dropdown">
+                            <a href="#" class="menu__link">More</a>  
+                            <img class="dropdown-decor" src="img/dropdown-decor.svg" alt="decor">
+                            <ul class="dropdown">
+                                <li class="dropdown__item"><a href="#" class="dropdown__link">Subitem 1</a></li>
+                                <li class="dropdown__item"><a href="#" class="dropdown__link">Subitem 2</a></li>
+                                <li class="dropdown__item"><a href="#" class="dropdown__link">Subitem 3</a></li>
+                            </ul>
                         </li>
                     </ul>
                 </nav> 
                  
-                <div class="header__search-wrapper"> 
+                <form class="header__search-wrapper"> 
                     <input class="header__search-input" type="search" placeholder="Search"> 
-                    <button class="header__search-btn"> 
+                    <button class="header__search-btn" type="submit"> 
                         <img class="header__search-img" src="img/search.svg" alt="">
                     </button>
-                </div> 
+                </form> 
                  
             </div>
 
         </div>
-    </header>
+    </header> 
+    <div class="breadcrumbs"> 
+        <div class="container"> 
+            <div class="breadcrumbs__inner"> 
+                <ul class="breadcrumbs__menu">
+                     <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="#">Home</a><img class="breadcrumbs__decor" src="img/breadcrumbs-decor.svg" alt="decor" ></li> 
+                     <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="#">Blog</a><img class="breadcrumbs__decor" src="img/breadcrumbs-decor.svg" alt="decor" ></li> 
+                     <li class="breadcrumbs__item"><a class="breadcrumbs__link" href="#">Blog</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
  <script src="js/script.js"></script>
 </body>
 
